# slowrx.rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: audit.yml  ci.yml  codeql.yml  deny.yml
docs/: history.md  intentional-deviations.md
docs/audits/: 2026-05-01-slowrx-c-rust-parity-audit.md  2026-05-02-slowrx-rs-c-rust-parity-audit-round-2.md  2026-05-11-deep-code-review-audit.md
docs/superpowers/plans/: 2026-05-01-slowrx-rs-v1.md  2026-05-02-v0.3.2-squiggle-parity.md  2026-05-02-v2.1-pd240.md  2026-05-02-v2.2-robot.md  2026-05-03-v0.3.3-fft-resolution.md  2026-05-04-v0.4.0-scottie.md  2026-05-05-v0.5.0-martin.md  2026-05-11-issue-89-vis-detector-fidelity.md  2026-05-11-issue-90-multi-image-streaming.md  2026-05-12-issue-85-shared-demod-dsp-modules.md  2026-05-14-issue-86-shared-test-tone-module.md  2026-05-14-issue-87-resampler-polish.md  2026-05-14-issue-88-find-sync-cleanup.md  2026-05-14-issue-91-modespec-single-source.md  2026-05-15-issue-92-api-hygiene.md  2026-05-15-issue-93-perf-scratch.md  2026-05-15-issue-94-docs-sweep.md
docs/superpowers/specs/: 2026-05-01-slowrx-rs-design.md  2026-05-02-v0.3.2-squiggle-parity-design.md  2026-05-02-v2-epic-split-design.md  2026-05-02-v2.2-robot-design.md  2026-05-03-v0.3.3-fft-resolution-design.md  2026-05-04-v0.4.0-scottie-design.md  2026-05-05-v0.5.0-martin-design.md  2026-05-11-issue-89-vis-detector-fidelity-design.md  2026-05-11-issue-90-multi-image-streaming-design.md  2026-05-12-issue-85-shared-demod-dsp-modules-design.md  2026-05-14-issue-86-shared-test-tone-module-design.md  2026-05-14-issue-87-resampler-polish-design.md  2026-05-14-issue-88-find-sync-cleanup-design.md  2026-05-14-issue-91-modespec-single-source-design.md  2026-05-15-issue-92-api-hygiene-design.md  2026-05-15-issue-93-perf-scratch-design.md  2026-05-15-issue-94-docs-sweep-design.md
examples/: decode_wav.rs
src/: decoder.rs  demod.rs  dsp.rs  error.rs  image.rs  lib.rs  mode_pd.rs  mode_robot.rs  mode_scottie.rs  modespec.rs  pd_test_encoder.rs  resample.rs  robot_test_encoder.rs  scottie_test_encoder.rs  snr.rs  sync.rs  test_tone.rs  vis.rs
tests/: ariss_fram2_validation.md  cli.rs  multi_image.rs  no_vis.rs  roundtrip.rs  unknown_vis.rs
